transfer-ui (0.3.13.1) unstable; urgency=low

  * Fixes: NB#229506 - Transfer UI not launched in single attempt
  * Fixes: NB#239226 - Tranfer UI DBUS API has incorrect scope in API file
  * Fixes: NB#239255 - Random TransferUI (raise abort) crash observed
  * Fixes: NB#240417 - Copyright tag not defined in transfer-ui

 -- Jukka Tiihonen <jukka.t.tiihonen@nokia.com>  Thu, 24 Mar 2011 12:31:44 +0530

transfer-ui (0.3.11.1) unstable; urgency=low

  * Allow client to set empty message in setMessage API
  * Fixes: NB#237509 - Deprecated enum MeeGo::QmTimeWhatChanged is used (by transfer-ui)

 -- Jukka Tiihonen <jukka.t.tiihonen@nokia.com>  Thu, 17 Mar 2011 15:05:18 +0530

transfer-ui (0.3.10.2) unstable; urgency=low

  * Changed argc to reference variable in interface and service class
  * Fixes: NB#235325 - Tranfer UI Qt Client API has incorrect scope in API file

 -- Jukka Tiihonen <jukka.t.tiihonen@nokia.com>  Wed, 09 Mar 2011 15:51:56 +0530

transfer-ui (0.3.10.1) unstable; urgency=low

  * Fixes: NB#233744 - Transfer API does not allow empty (= default) text for pending state

 -- Jukka Tiihonen <jukka.t.tiihonen@nokia.com>  Tue, 08 Mar 2011 12:53:08 +0530

transfer-ui (0.3.9.2) unstable; urgency=low

  * Added a check for tuidata present in the list

 -- Jukka Tiihonen <jukka.t.tiihonen@nokia.com>  Thu, 03 Mar 2011 16:06:49 +0530

transfer-ui (0.3.9.1) unstable; urgency=low

  * Fixes: NB#230790 - TransferUI : TUI crash (TUIDataModel::setItemData ) observed while cancelling the ongoing transfer when there is an pending transfer in queue.
  * Fixes: NB#230804 - TransferUI : TransferUI : Clearing completed transfers, clears even the ongoing transfer.

 -- Jukka Tiihonen <jukka.t.tiihonen@nokia.com>  Mon, 28 Feb 2011 13:59:15 +0530

transfer-ui (0.3.8.2) unstable; urgency=low

  * Transfer UI changes to have single model for transfers

 -- Jukka Tiihonen <jukka.t.tiihonen@nokia.com>  Thu, 24 Feb 2011 12:10:07 +0530

transfer-ui (0.3.8.1) unstable; urgency=low
