@@ -25,7 +25,7 @@ DOXYFILE_ENCODING      = UTF-8
 # The PROJECT_NAME tag is a single word (or a sequence of words surrounded
 # by quotes) that should identify the project.
 
-PROJECT_NAME           = transferUI
+PROJECT_NAME           = "Transfer UI"
 
 # The PROJECT_NUMBER tag can be used to enter a project or revision number.
 # This could be handy for archiving the generated documentation or
@@ -576,10 +576,8 @@ WARN_LOGFILE           =
 
 INPUT                  =    libtuiclient/TransferUI/client.h \
                             libtuiclient/TransferUI/transfer.h \
-                            libtuiclient/TransferUI/export.h    \
-                            libtuiclient/examples   \
-                            libtransferwidgets/TransferWidgets/detailsdialog.h \
-                            libtransferwidgets/examples
+                            libtuiclient/examples \
+                            libtuiclient/src/mainpage.h
 
 # This tag can be used to specify the character encoding of the source files
 # that doxygen parses. Internally doxygen uses the UTF-8 encoding, which is
@@ -638,8 +636,7 @@ EXCLUDE_SYMBOLS        =
 # directories that contain example code fragments that are included (see
 # the \include command).
 
-EXAMPLE_PATH           = libtuiclient/examples  \
-                            libtransferwidgets/examples
+EXAMPLE_PATH           = libtuiclient/examples
 
 # If the value of the EXAMPLE_PATH tag contains directories, you can use the
 # EXAMPLE_PATTERNS tag to specify one or more wildcard pattern (like *.cpp
@@ -659,7 +656,7 @@ EXAMPLE_RECURSIVE      = NO
 # directories that contain image that are included in the documentation (see
 # the \image command).
 
-IMAGE_PATH             = libtuiclient/examples/images/
+IMAGE_PATH             =
 
 # The INPUT_FILTER tag can be used to specify a program that doxygen should
 # invoke to filter for each input file. Doxygen will invoke the filter program
